frame/support/test/tests/pallet_ui/genesis_001.stderr
error: Invalid pallet::genesis_build, expect impl<..> GenesisBuild<..> for GenesisConfig<..>
  --> $DIR/genesis_001.rs:19:2
   |
19 |     impl Foo {}
   |     ^^^^
